# KustKust

./: README.md  herolaba.docx  lb1_done.c  main.c  test.c  test.txt  ~$дготовка.docx  ~WRL2221.tmp  Новый текстовый документ.txt  отчет.docx  подготовка.docx
CaAA/: CaAA.sln
Huffman/: Huffman.vcxproj  main.cpp
MSL/: .gitignore  Button.cpp  Button.h  Group.cpp  Group.h  Makefile  Object.cpp  Object.h  README.md  Simple_B.cpp  Simple_B.h  Simple_G.cpp  Simple_G.h  Sprite_I.cpp  Sprite_I.h  Texture_I.cpp  Texture_I.h  Toggle_B.cpp  Toggle_B.h  Toggle_G.cpp  Toggle_G.h  build.sh  main.cpp  mgl.h  template.h  vect.cpp  vect.h
Programs/wallmake/: CMakeLists.txt  build.sh
Programs/wallmake/code/: main.cpp
Programs/wallmake/source/: main.cpp
Programs/wallmake/source/utilities/: sudoku.cpp  test.cpp  test.hpp
Programs/wallmake/source/widgets/: gamemap.hpp  mapcell.cpp  mapcell.hpp
Programs/wallmake/src/: main.cpp
Programs/wallmake/src/xml/: tag.cpp  tag.hpp
Programs/wallmake/tests/source/: sudoku_test.cpp
Project/: pom.xml
TestSQL/: Panin_PA.drawio  TestSQL.drawio  UML.drawio  Диаграмма без названия.drawio
alpha/: List.h  main.cpp
another/: Complex.cpp  Complex.h  ImportantFunctions.cpp  ImportantFunctions.h  Template.docx  coding_txt_pro.cpp  lab4.asm  lab5.asm  template.odt  коды подтверждения.txt
daa_1/: Makefile  main.cpp
daa_2/: daa_func.cpp  daa_func.h  daa_type.h  file.txt  main.cpp
daa_3/: daa_func.cpp  daa_oper.h  daa_type.h  main.cpp
daa_4/: Source.cpp  daa_func.cpp  daa_func.h  main.cpp
daa_5/: main.py
get-opt/: .gitignore  (+6 more)
(+335 files in other folders)
